--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="components/bootstrap-additions/dist/bootstrap-additions.min.css">
+    <link rel="stylesheet" href="components/angular-motion/dist/angular-motion.min.css">
     <link rel="stylesheet" href="stylesheets/css/main.css">
   </head>
   <body ng-controller="MainCtrl" ng-cloak><!--[if lt IE 8]>
@@ -29,7 +32,11 @@
     </footer>
     <script src="components/jquery/jquery.min.js"></script>
     <script src="components/angular/angular.min.js"></script>
+    <script src="components/angular-animate/angular-animate.min.js"></script>
+    <script src="components/angular-sanitize/angular-sanitize.min.js"></script>
     <script src="components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="components/angular-strap/dist/angular-strap.min.js"></script>
+    <script src="components/angular-strap/dist/angular-strap.tpl.min.js"></script>
     <script src="js/dist/built.min.js"></script>
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
