--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div class="row">
       <div class="col-3">{{welcome}}
         <ul>
-          <li><a ui-sref="state1" href="javascript:;">State 1</a></li>
-          <li><a ui-sref="state2" href="javascript:;">State 2</a></li>
+          <li><a ui-sref="home" href="javascript:;">Home</a></li>
+          <li><a ui-sref="styleguide" href="javascript:;">Styleguide</a></li>
         </ul>
       </div>
       <div ui-view class="col-9"></div>
