small improvements: Hotkeys and css changes

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="components/jquery/jquery.min.js"></script>
     <script src="components/angular/angular.min.js"></script>
     <script src="components/angular-ui-router/release/angular-ui-router.min.js"></script>
+    <script src="components/angular-hotkeys/build/hotkeys.min.js"></script>
     <script src="js/dist/built.min.js"></script>
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
